Native/Test/KL/global-const-is-immutable.out
global-const-is-immutable.kl:4:3: error: expression is not an l-value
