Native/Test/KL/global-const-is-immutable.kl
const Scalar PI = 3.141;
function entry()
{
  PI = 2.718;
}
